Started on listview of movies in controller Issue #2